[project]
name = "vn-luat-mcp"
version = "0.1.0"
description = "MCP server tra cứu pháp luật Việt Nam (Bộ Pháp Điển + Án lệ) trên PostgreSQL"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "mcp>=1.2.0",
    "psycopg2-binary>=2.9",
]

[project.scripts]
vn-luat-mcp = "vn_luat_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/vn_luat_mcp"]
